// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StoreAddressStoreDetails /> should not render opening hours when the object does not contain hours 1`] = `
<Accordion
  renderLabel={[Function]}
>
  <div
    className="css-1t9uipm"
  >
    <div>
      <StoreAddressMailingAddress
        address={
          Object {
            "phoneNumber": "555-987654321",
          }
        }
      />
      <StoreAddressPhoneNumber
        phone="555-987654321"
      />
    </div>
  </div>
</Accordion>
`;

exports[`<StoreAddressStoreDetails /> should not render opening hours when the property does not exist within the store 1`] = `
<Accordion
  renderLabel={[Function]}
>
  <div
    className="css-1t9uipm"
  >
    <div>
      <StoreAddressMailingAddress
        address={
          Object {
            "phoneNumber": "555-987654321",
          }
        }
      />
      <StoreAddressPhoneNumber
        phone="555-987654321"
      />
    </div>
  </div>
</Accordion>
`;

exports[`<StoreAddressStoreDetails /> should render as expected 1`] = `
<Accordion
  renderLabel={[Function]}
>
  <div
    className="css-1t9uipm"
  >
    <div
      className="css-1ir6nuc"
    >
      <StoreAddressOpeningHours
        hours={
          Object {
            "mon": "09:00 - 17:00",
            "sun": "09:00 - 17:00",
          }
        }
      />
    </div>
    <div>
      <StoreAddressMailingAddress
        address={
          Object {
            "phoneNumber": "555-987654321",
          }
        }
      />
      <StoreAddressPhoneNumber
        phone="555-987654321"
      />
    </div>
  </div>
</Accordion>
`;
